allow local images testing

--- a/charts/k8s-integration/templates/collector/deployment.yaml
+++ b/charts/k8s-integration/templates/collector/deployment.yaml
@@ -56,8 +56,12 @@ spec:
         - name: miggo-collector
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+          {{- if .Values.collector.image.fullPath }}
+          image: "{{ .Values.collector.image.fullPath }}"
+          {{- else }}
           image: "{{ .Values.image.registry }}/{{ .Values.collector.image.repository }}:{{ .Values.collector.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- end }}
+          imagePullPolicy: {{ .Values.collector.image.pullPolicy | default .Values.image.pullPolicy }}
           args:
             - --config
             - /etc/collector/config.yaml
