specific default collector selector

--- a/charts/k8s-integration/templates/collector/deployment.yaml
+++ b/charts/k8s-integration/templates/collector/deployment.yaml
@@ -35,7 +35,7 @@ spec:
         {{- end }}
       labels:
         component: collector
-        app: {{ include "k8s-integrations.fullname" . }}-collector
+        miggo.io/app: {{ include "k8s-integrations.fullname" . }}-collector
         {{- include "miggo-collector.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- tpl (toYaml .) $ | nindent 8 }}
