--- a/charts/k8s-integration/templates/collector/deployment.yaml
+++ b/charts/k8s-integration/templates/collector/deployment.yaml
@@ -52,6 +52,10 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       serviceAccountName: {{ include "k8s-integrations.serviceAccountName" . }}-collector
+      {{- if .Values.collector.initContainers }}
+      initContainers:
+        {{ toYaml .Values.collector.initContainers | nindent 8 }}
+      {{- end }}
       containers:
         - name: miggo-collector
           securityContext:
