--- a/charts/k8s-integration/values.yaml
+++ b/charts/k8s-integration/values.yaml
@@ -243,6 +243,8 @@ collector:
   volumes: []
   # -- Additional volume mounts
   volumeMounts: []
+  # -- InitContainers to initialize the pod
+  initContainers: []
 
   image:
     # -- Image repository
