--- a/charts/k8s-integration/values.yaml
+++ b/charts/k8s-integration/values.yaml
@@ -122,6 +122,8 @@ k8sRead:
     interval: 6h
     # -- Disable compression for data transfer
     disableCompression: false
+    # -- Exclude those components from the report (comma separated list of persistent-volume-claim daemon-set stateful-set ingress ingress-class http-route network-policy namespace service-account persistent-volume cron-job node deployment job replica-set gateway-class pod service)
+    exclude: "pod"
 
   resources:
     limits:
