--- a/charts/k8s-integration/templates/static-sbom/role.yaml
+++ b/charts/k8s-integration/templates/static-sbom/role.yaml
@@ -9,7 +9,7 @@ rules:
   verbs: ["get", "list", "watch"]
 
 - apiGroups: [""]
-  resources: ["secrets", "serviceaccounts"]
+  resources: ["secrets", "serviceaccounts", "namespaces"]
   verbs: ["get", "list", "watch"]
 
 - apiGroups: ["apps"]
