add namespace flags to helm charts

--- a/charts/k8s-integration/templates/k8s-read/deployment.yaml
+++ b/charts/k8s-integration/templates/k8s-read/deployment.yaml
@@ -77,6 +77,7 @@ spec:
             {{ if .Values.k8sRead.config.disableCompression }}
             - --disable-compression
             {{ end }}
+            {{- include "namespace.flags" . | nindent 12 }}
           envFrom:
           {{- with .Values.extraEnvsFrom }}
           {{- toYaml . | nindent 10 }}
