Add profiler to support function-level reachability analysis
Resolves: MIG-5095

--- a/charts/k8s-integration/templates/collector/deployment.yaml
+++ b/charts/k8s-integration/templates/collector/deployment.yaml
@@ -69,6 +69,10 @@ spec:
           args:
             - --config
             - /etc/collector/config.yaml
+            {{- if .Values.sensor.profiler.enabled }}
+            - --feature-gates
+            - service.profilesSupport
+            {{- end }}
           envFrom:
           {{- with .Values.extraEnvsFrom }}
           {{- toYaml . | nindent 10 }}
