--- a/.github/workflows/run-unittests.yaml
+++ b/.github/workflows/run-unittests.yaml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Helm
-        uses: azure/setup-helm@v3
+        uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112 # v4.3.0
 
       - name: Install helm unittest plugin
         run: |
