reduce the k8s-read resources to something reasonable

--- a/charts/k8s-integration/templates/k8s-read/deployment.yaml
+++ b/charts/k8s-integration/templates/k8s-read/deployment.yaml
@@ -86,6 +86,8 @@ spec:
           {{- toYaml . | nindent 10 }}
           {{- end }}
           env:
+          - name: GOMEMLIMIT
+            value: {{ .Values.k8sRead.resources.requests.memory }}B
           {{- with .Values.extraEnvs }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
