reduce the k8s-read resources to something reasonable (#92)
* reduce the k8s-read resources to something reasonable

* [AUTO GITHUB] Chart README.md

* [AUTO GITHUB] Bump chart versions

* set gomemlimit to k8s-read

* [AUTO GITHUB] Chart README.md

---------

Co-authored-by: dvdlevanon-miggo <174447273+dvdlevanon-miggo@users.noreply.github.com>

--- a/charts/k8s-integration/templates/k8s-read/deployment.yaml
+++ b/charts/k8s-integration/templates/k8s-read/deployment.yaml
@@ -86,6 +86,10 @@ spec:
           {{- toYaml . | nindent 10 }}
           {{- end }}
           env:
+          {{- if and (.Values.k8sRead.useGOMEMLIMIT) ((((.Values.k8sRead.resources).limits).memory))  }}
+          - name: GOMEMLIMIT
+            value: {{ include "gomemlimit" .Values.k8sRead.resources.limits.memory | quote }}
+          {{- end }}
           {{- with .Values.extraEnvs }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
