--- a/charts/k8s-integration/templates/collector/deployment.yaml
+++ b/charts/k8s-integration/templates/collector/deployment.yaml
@@ -20,7 +20,7 @@ metadata:
   {{- end }}
 spec:
   {{ if not .Values.collector.instancePerNode }}
-  replicas: 1
+  replicas: {{ .Values.collector.replicas }}
   {{ end }}
   selector:
     matchLabels:
